# rust-server

./: .env  .env.example  .gitignore  .gitmodules  ARCHITECTURE.md  CLI_COMMANDS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING.md  Cargo.toml  Dockerfile  FEATURES.md  Makefile  Makefile.am  README.md  bcrypt_blowfish_integration.patch  config.h.in~  config.json  configure  configure.ac  configure~  create_admin.sh  crypt_blowfish_local.patch  custom1_decrypt_fixture  docker-compose.yml  libbcrypt_local.patch  main.cpp  my-socket-server.service  okida.service  oxide.service  package-lock.json  package.json  patch_third_party.sh  postinstall.sh  uninstall.sh  vitest.config.ts
.deps/: oxide-main.Po
.github/: copilot-instructions.md
.github/workflows/: ci.yml  rust.yml
.sqlx/: query-730b7cae279599e053bffab206cbd6201fcc858bd9dbcde42d32f60ea96a23e6.json  query-d2ea47bc23832bd853a10e87d8eff4d59bf246e3309216bd891a906c86b7f654.json
data/: lotus.db
migrations/: 20230510120000_create_shards_table.sql  20230510130000_update_shards_table.sql
services/sslProxy/: Dockerfile
src/: Server.cpp  Server.hpp  admin-cli.guard.test.ts  admin-cli.ts  admin.rs  auth.rs  auth_tests.rs  bootstrap.ts  config.rs  config.ts  connection_manager.cpp  connection_manager.hpp  custom1_decrypt_fixture.cpp  custom1_handlers.cpp  custom1_handlers.hpp  custom1_packet.hpp  custom2_handlers.cpp  custom2_handlers.hpp  database.rs  database_tests.rs  db_handler.cpp  db_handler.hpp  express-app.ts  express-routes.test.ts  http_handlers.cpp  http_handlers.hpp  lib.rs  logger.cpp  logger.hpp  logger.ts  logging.rs  login.cpp  login.hpp  main.rs  nps-handler.ts  server.rs  server.ts  server.unit.test.ts  server_tests.rs  session_manager.cpp  (+5 more)
src/.deps/: oxide-Server.Po  test_server-Server.Po
src/auth/: admin-cli.guard.test.ts  checkCredentials.test.ts  checkCredentials.ts  import-test.ts  shardModel.ts  shards.ts  users.json  users.sqlite
src/parsers/: index.ts  tcp.ts
src/parsers/nps/: LoginRequestMessage.test.ts  LoginRequestMessage.ts  index.ts
src/routes/: auth.ts  shardlist.ts
src/types/: index.ts  nps.ts  ssl2.ts  ssl3.ts  tcp.test.ts  tcp.ts  tls.ts
src/types/nps/: LoginRequestMessage.ts  index.ts  parseNpsBufferSchema.ts
test/: express-routes.test.ts
tests/: test_connection_manager.cpp  test_custom1_helpers.cpp  test_custom1_login.cpp  test_custom1_packet.cpp  test_login.cpp  test_server.cpp  test_session_manager.cpp
tests/.deps/: test_server-test_server.Po
