[package]
name = "rust-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
actix-http = "3.0"
tokio-util = "0.7"
actix-service = "2.0"
httparse = "1.8"
warp = "0.3"
hyper = "0.14"
