[package]
name = "oxide"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
actix-http = "3.0"
tokio-util = "0.7"
actix-service = "2.0"
httparse = "1.8"
warp = "0.3"
hyper = "0.14"
sentry = "0.27"
sentry-actix = "0.27"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
lazy_static = "1.5.0"
