[package]
name = "oxide"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.45", features = ["full"] }
serde_json = "1.0"
actix-http = "3.0"
tokio-util = "0.7"
actix-service = "2.0"
httparse = "1.8"
warp = "0.3"
hyper = "1.6.0"
sentry = { version = "0.38", features = ["tracing"] }
sentry-actix = "0.38"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
lazy_static = "1.5.0"
bytes = "1.4.0"
futures = "0.3"
http-body-util = "0.1.3"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres"] }
once_cell = "1.17"
